# MiniLetterboxd

./: CMakeLists.txt  Persistence.cpp  README_F2.md  readme.md
data/: friends.txt  medias.txt  reviews.txt  users.txt
design/: README_design.md
gui/: CMakeLists.txt  addfrienddialog.cpp  addfrienddialog.h  addfrienddialog.ui  addmoviedialog.cpp  addmoviedialog.h  addmoviedialog.ui  addreviewdialog.cpp  addreviewdialog.h  addreviewdialog.ui  addseriesdialog.cpp  addseriesdialog.h  addseriesdialog.ui  deletefrienddialog.cpp  deletefrienddialog.h  deletefrienddialog.ui  deletereviewdialog.cpp  deletereviewdialog.h  deletereviewdialog.ui  friendactivitydialog.cpp  friendactivitydialog.h  friendactivitydialog.ui  listmediasdialog.cpp  listmediasdialog.h  listmediasdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerdialog.cpp  registerdialog.h  registerdialog.ui  usermenuwindow.cpp  usermenuwindow.h  usermenuwindow.ui  userpagedialog.cpp  userpagedialog.h  userpagedialog.ui
include/: AppController.h  CLIView.h  FriendList.h  GUIView.h  Media.h  Movie.h  Persistence.h  Review.h  Series.h  User.h  main.cpp
src/: AppController.cpp  CLIView.cpp  FriendList.cpp  Media.cpp  Persistence.cpp  Review.cpp  Series.cpp  User.cpp  main.cpp
